Created display connection for Titles

--- a/library-express/views/main.handlebars
+++ b/library-express/views/main.handlebars
@@ -1,7 +1,7 @@
 <main>
     <h2>Testing123</h2>
     <p>
-        <a href="/title_management">Manage Titles</a>
+        <a href="/titles">Manage Titles</a>
     </p>
     <p>
         <a href="/books">Manage Book Inventory</a>
