--- a/library-express/views/titles.handlebars
+++ b/library-express/views/titles.handlebars
@@ -2,21 +2,21 @@
     <div>
         <h3>Add Title to TEST Library</h3>
         <!-- <form action="/query_book_api" method="post"> -->
-        <form action="/add_title" method="get">
+        <form id="addTitle" action="/titles" method="post">
             <p><label for="ISBN">ISBN:</label><br>
-                <input type="text" id="ISBN" name="ISBN">
+                <input type="text" name="ISBN">
             </p>
-            <p><label for="title">Title:</label><br>
-                <input type="text" id="title" name="title">
+            <p><label for="bookTitle">Title:</label><br>
+                <input type="text" name="bookTitle">
             </p>
             <p><label for="author">Author:</label><br>
-                <input type="text" id="author" name="author">
+                <input type="text" name="author">
             </p>
             <p><label for="publisher">Publisher:</label><br>
-                <input type="text" id="publisher" name="publisher">
+                <input type="text" name="publisher">
             </p>
             <p><label for="datePublished">Date Published:</label><br>
-                <input type="date" id="datePublished" name="datePublished">
+                <input type="date" name="datePublished">
             </p>
             <p><input type="submit" value="Submit"></p>
         </form>
