--- a/library-express/views/layouts/index.handlebars
+++ b/library-express/views/layouts/index.handlebars
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-
-    </head>
     <body>
-        <h1>Welcome to the TESTING Library</h1>
         <div>
+            {{{> header}}}
             {{{ body }}}
         </div>
-
     </body>
 </html>
