Implemented patrons create and read operations

--- a/library-express/views/main.handlebars
+++ b/library-express/views/main.handlebars
@@ -7,7 +7,7 @@
         <a href="/books">Manage Book Inventory</a>
     </p>
     <p>
-        <a href="/add_patron">Add New Patron</a>
+        <a href="/patrons">Add New Patron</a>
     </p>
     <p>
         <a href="/create_loan">Create a Loan</a>
