--- a/library-express/views/layouts/index.handlebars
+++ b/library-express/views/layouts/index.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
     <body>
         <div>
-            {{{> header}}}
+            {{!-- {{{> header}}} --}}
             {{{ body }}}
         </div>
     </body>
