--- a/library-express/views/partials/header.handlebars
+++ b/library-express/views/partials/header.handlebars
@@ -4,7 +4,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/titles">Titles</a></li>
             <li><a href="/books">Books</a></li>
-            <li><a href="/add_patron">Add a Patron</a></li>
+            <li><a href="/patrons">Add a Patron</a></li>
             <li><a href="/create_loan">Create a Loan</a></li>
             <li><a href="/edit_loan">Edit a Loan</a></li>
             <li><a href="/loan_status">Loan Statuses</a></li>
