finish read operations

--- a/library-express/views/loan_status.handlebars
+++ b/library-express/views/loan_status.handlebars
@@ -15,7 +15,7 @@
                 <th>Status Name</th>
             </thead>
             <tbody>
-                {{#each LoanStatus}}
+                {{#each statuses}}
                 <tr>
                     <td>{{statusID}}</td>
                     <td>{{statusDescription}}</td>
