--- a/library-express/views/loan_status.handlebars
+++ b/library-express/views/loan_status.handlebars
@@ -2,10 +2,10 @@
 <html lang="en">
     <body>
         <h1>Library Inventory Management</h1>
-        <form>
+        <form id="addStatus" action="/loan_status" method="post">
             <h1>Add loan status</h1>
             <label>Status: </label>
-            <input type="text" id="status"><br>
+            <input type="text" name="statusDescription"><br>
             <p><input type="submit" value="Submit"></p>
         </form>
         <table>
