Added loans display to create loan page

--- a/library-express/views/create_loan.handlebars
+++ b/library-express/views/create_loan.handlebars
@@ -43,9 +43,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {{#each Loans}}
+                    {{#each loans}}
                     <tr>
-                        <td>{{patron}}</td>
+                        <td>{{patronName}}</td>
                         <td>{{loanDate}}</td>
                         <td>{{bookCount}}</td>
                         <td>
