--- a/library-express/views/create_loan.handlebars
+++ b/library-express/views/create_loan.handlebars
@@ -3,11 +3,11 @@
     <body>
         <div>
             <h2>Create a Loan</h2>
-            <form>
+            <form id="addLoan" action="/create_loan" method="post">
                 <p><label>Select the Patron: </label>
                     <select name="patron" id="patron">
                         {{#each patrons}}
-                        <option value="{{patronID}}">{{lastName}}, {{firstName}}</option>
+                        <option value="{{memberID}}">{{lastName}}, {{firstName}}</option>
                         {{/each}}
                     </select></p>
                 <p><label for="books">Choose the books: </label>
@@ -23,7 +23,7 @@
                         document.write(newDate.toDateString());
                     </script></b>
                 </p>
-                <button>
+                <button type="submit">
                     Create Loan
                 </button>
                 <button>
