actually fixing loan creation SQL queries

--- a/library-express/views/create_loan.handlebars
+++ b/library-express/views/create_loan.handlebars
@@ -5,13 +5,14 @@
             <h2>Create a Loan</h2>
             <form id="addLoan" action="/create_loan" method="post">
                 <p><label>Select the Patron: </label>
-                    <select name="patron" id="patron">
+                    <select name="patronID" id="patronID">
                         {{#each patrons}}
                         <option value="{{patronID}}">{{lastName}}, {{firstName}}</option>
                         {{/each}}
                     </select></p>
                 <p><label for="books">Choose the books: </label>
-                    <select name="books" id="books" multiple>
+                    {{!-- <select name="books" id="bookID" multiple> --}}
+                    <select name="bookID" id="bookID">
                         {{#each books}}
                         <option value="{{bookID}}">{{bookID}} - {{bookTitle}}</option>
                         {{/each}}
