Updated main page title

--- a/library-express/views/main.handlebars
+++ b/library-express/views/main.handlebars
@@ -1,5 +1,5 @@
 <main>
-    <h2>Testing123</h2>
+    <h2>Group 44 - Library Database</h2>
     <p>
         <a href="/titles">Manage Titles</a>
     </p>
