--- a/library-express/views/partials/header.handlebars
+++ b/library-express/views/partials/header.handlebars
@@ -1,17 +1,15 @@
 <header>
     <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/titles">Titles</a></li>
-            <li><a href="/books">Books</a></li>
-            <li><a href="/patrons">Add a Patron</a></li>
-            <li><a href="/create_loan">Create a Loan</a></li>
-            <li><a href="/edit_loan">Edit a Loan</a></li>
-            <li><a href="/loan_status">Loan Statuses</a></li>
-            <li><a href="/add_title">Add a Title</a></li>
-        </ul>
+        <table>
+            <tr>
+                <td><a href="/">Home</a></td>
+                <td><a href="/titles">Titles</a></td>
+                <td><a href="/books">Books</a></td>
+                <td><a href="/patrons">Add a Patron</a></td>
+                <td><a href="/create_loan">Create a Loan</a></td>
+                <td><a href="/edit_loan">Edit a Loan</a></td>
+                <td><a href="/loan_status">Loan Statuses</a></td>
+            </tr>
+        </table>
     </nav>
-    <p>
-        <h1>Welcome to the TESTING Library</h1>
-    </p>
 </header>
