--- a/library-express/views/patrons.handlebars
+++ b/library-express/views/patrons.handlebars
@@ -2,10 +2,10 @@
     <h2>Add a New Patron</h2>
     <form id="addPatron" action="/patrons" method="post">
         <p><label for="firstName">First Name:</label><br>
-            <input type="text" name="firstName">
+            <input type="text" name="firstName" required>
         </p>
         <p><label for="lastName">Last Name:</label><br>
-            <input type="text" name="lastName">
+            <input type="text" name="lastName" required>
         </p>
         <p><label for="registerDate">Registered Date:</label><br>
             <input type="date" name="registerDate">
