--- a/library-express/views/titles.handlebars
+++ b/library-express/views/titles.handlebars
@@ -4,10 +4,10 @@
         <!-- <form action="/query_book_api" method="post"> -->
         <form id="addTitle" action="/titles" method="post">
             <p><label for="ISBN">ISBN:</label><br>
-                <input type="text" name="ISBN">
+                <input type="text" name="ISBN" required>
             </p>
             <p><label for="bookTitle">Title:</label><br>
-                <input type="text" name="bookTitle">
+                <input type="text" name="bookTitle" required>
             </p>
             <p><label for="author">Author:</label><br>
                 <input type="text" name="author">
