--- a/library-express/views/create_loan.handlebars
+++ b/library-express/views/create_loan.handlebars
@@ -11,8 +11,7 @@
                         {{/each}}
                     </select></p>
                 <p><label for="books">Choose the books: </label>
-                    {{!-- <select name="books" id="bookID" multiple> --}}
-                    <select name="bookID" id="bookID">
+                    <select name="books" id="bookID" multiple>
                         {{#each books}}
                         <option value="{{bookID}}">{{bookID}} - {{bookTitle}}</option>
                         {{/each}}
