--- a/library-express/views/loan_status.handlebars
+++ b/library-express/views/loan_status.handlebars
@@ -5,7 +5,7 @@
         <form id="addStatus" action="/loan_status" method="post">
             <h1>Add loan status</h1>
             <label>Status: </label>
-            <input type="text" name="statusDescription"><br>
+            <input type="text" name="statusDescription" required><br>
             <p><input type="submit" value="Submit"></p>
         </form>
         <table>
