more functionality to edit/delete loan details

--- a/library-express/views/main.handlebars
+++ b/library-express/views/main.handlebars
@@ -16,6 +16,6 @@
         <a href="/loan_status">Create New Loan Status</a>
     </p>
     <p>
-        <a href="/edit_loan">Edit Loan Items</a>
+        <a href="/loan_items">View Loan Details</a>
     </p>
 </main>
