--- a/library-express/views/partials/header.handlebars
+++ b/library-express/views/partials/header.handlebars
@@ -7,7 +7,7 @@
                 <td><a href="/books">Books</a></td>
                 <td><a href="/patrons">Add a Patron</a></td>
                 <td><a href="/create_loan">Create a Loan</a></td>
-                <td><a href="/edit_loan">Edit a Loan</a></td>
+                <td><a href="/loan_items">View Loan Details</a></td>
                 <td><a href="/loan_status">Loan Statuses</a></td>
             </tr>
         </table>
