--- a/library-express/views/edit_loan.handlebars
+++ b/library-express/views/edit_loan.handlebars
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <h1>Loan Items</h1>
+        <h1>Library Inventory Management</h1>
         <table>
-            <caption>Renewing a book will automatically extend the due date by two weeks.</caption>
+            <caption>Edit Loan Details</caption>
             <thead>
-                <tr>
-                    <th>Loan ID</th>
-                    <th>Patron</th>
-                    <th>Book ID</th>
-                    <th>Title</th>
-                    <th>Due Date</th>
-                    <th>Loan Status</th>
-                    <th>Renewal Count</th>
-                    <th>Confirm</th>
-                    <th>Renew</th>
-                    <th>Return</th>
-                </tr>
+                <th>Loan ID</th>
+                <th>Patron</th>
+                <th>Book ID</th>
+                <th>Title</th>
+                <th>Loan Status</th>
+                <th>Due Date</th>
+                <th>Renewal Count</th>
             </thead>
             <tbody>
-                {{#each loanItems}}
                 <tr>
-                    <form>
-                        <input type="hidden" id="loanID" name="loanID" value={{loanID}}>
-                        <input type="hidden" id="bookID" name="bookID" value={{bookID}}>
+                    <form action="/edit_loan_details" method="post">
                         <td>{{loanID}}</td>
-                        <td>{{patronName}}</td>
+                        <td>{{patron}}</td>
                         <td>{{bookID}}</td>
-                        <td>{{bookTitle}}</td>
-                        <td>{{dueDate}}</td>
-                        <td>{{statusDescription}}</td>
-                        <td>{{renewalCount}}</td>
-                        <td><button onclick="change_loan"({{loanID}},{{bookID}},{{dueDate}},{{statusDescription}})>Submit Changes</button></td>
-                        <td><button type="submit" formaction="/renew_loan" formmethod="post">Renew</button></td>
-                        <td><button type="submit" formaction="/return_book" formmethod="post">Return</button></td>
+                        <td>{{title}}</td>
+                        <td><select id="loan_status" name="loan_status">
+                            <option value="{{currentStatusID}}">{{currentStatusDescription}}</option>
+                            {{#each statuses}}
+                                <option value="{{statusID}}">{{statusDescription}}</option>
+                            {{/each}}
+                        </select></td>
+                        <td><input type="date" id="dueDate" name="dueDate" value="{{dueDate}}"></td>
+                        <td><input type="number" id="renewalCount" name="renewalCount" min="0" value="{{renewalCount}}"></td>
+                        <br><input type="submit" value="Update">
                     </form>
                 </tr>
-                {{/each}}
             </tbody>
         </table>
     </body>
