finish loan editing

--- a/library-express/views/edit_loan.handlebars
+++ b/library-express/views/edit_loan.handlebars
@@ -16,19 +16,21 @@
             <tbody>
                 <tr>
                     <form action="/edit_loan_details" method="post">
-                        <td>{{loanID}}</td>
-                        <td>{{patron}}</td>
-                        <td>{{bookID}}</td>
-                        <td>{{title}}</td>
-                        <td><select id="loan_status" name="loan_status">
-                            <option value="{{currentStatusID}}">{{currentStatusDescription}}</option>
+                        <input type="hidden" id="loanID" name="loanID" value={{loanItems.loanID}}>
+                        <input type="hidden" id="bookID" name="bookID" value={{loanItems.bookID}}>
+                        <td>{{loanItems.loanID}}</td>
+                        <td>{{loanItems.patronName}}</td>
+                        <td>{{loanItems.bookID}}</td>
+                        <td>{{loanItems.bookTitle}}</td>
+                        <td><select id="loanStatus" name="loanStatus">
+                            <option value="{{loanItems.currentStatusID}}">{{loanItems.currentStatusDescription}}</option>
                             {{#each statuses}}
                                 <option value="{{statusID}}">{{statusDescription}}</option>
                             {{/each}}
                         </select></td>
-                        <td><input type="date" id="dueDate" name="dueDate" value="{{dueDate}}"></td>
-                        <td><input type="number" id="renewalCount" name="renewalCount" min="0" value="{{renewalCount}}"></td>
-                        <br><input type="submit" value="Update">
+                        <td><input type="date" id="dueDate" name="dueDate" value="{{loanItems.dueDate}}"></td>
+                        <td><input type="number" id="renewalCount" name="renewalCount" min="0" value="{{loanItems.renewalCount}}"></td>
+                        <td><input type="submit" value="Update"></td>
                     </form>
                 </tr>
             </tbody>
