--- a/library-express/views/edit_loan.handlebars
+++ b/library-express/views/edit_loan.handlebars
@@ -3,7 +3,7 @@
     <body>
         <h1>Library Inventory Management</h1>
         <table>
-            <caption>Edit Loan Details</caption>
+            <h2>Edit Loan Details</h2>
             <thead>
                 <th>Loan ID</th>
                 <th>Patron</th>
