--- a/library-express/views/loan_status.handlebars
+++ b/library-express/views/loan_status.handlebars
@@ -13,7 +13,7 @@
             <thead>
                 <th>Status ID</th>
                 <th>Status Name</th>
-                <th>Delete</th>
+                {{!-- <th>Delete</th> --}}
             </thead>
             <tbody>
                 {{#each statuses}}
@@ -22,7 +22,7 @@
                             <input type="hidden" id="statusID" name="statusID" value={{statusID}}>
                             <td>{{statusID}}</td>
                             <td>{{statusDescription}}</td>
-                            <td><input type="submit" value="Delete"/></td>
+                            {{!-- <td><input type="submit" value="Delete"/></td> --}}
                         </tr>
                     </form>
                 {{/each}}
