--- a/library-express/views/update_patrons.handlebars
+++ b/library-express/views/update_patrons.handlebars
@@ -25,4 +25,6 @@
         </p>
         <p><input type="submit" value="Submit"></p>
     </form>
+    <button onclick="updatePatron({{patron.id}})">Update</button>
+    <script defer>selectTitle({{patron.favoriteTitle}});</script>
 </main>
