Added js source to patrons update. does not work

--- a/library-express/views/update_patrons.handlebars
+++ b/library-express/views/update_patrons.handlebars
@@ -26,5 +26,6 @@
         <p><input type="submit" value="Submit"></p>
     </form>
     <button onclick="updatePatron({{patron.id}})">Update</button>
-    <script defer>selectTitle({{ patron.favoriteTitle }});</script>
+    <script src="../public/selectTitle.js"></script>
+    <script defer>selectTitle({{patron.favoriteTitle}});</script>
 </main>
