--- a/library-express/views/patrons.handlebars
+++ b/library-express/views/patrons.handlebars
@@ -1,4 +1,5 @@
 <div>
+    <h1>Library Inventory Management</h1>
     <h2>Add a New Patron</h2>
     <form id="addPatron" action="/patrons" method="post">
         <p><label for="firstName">First Name:</label><br>
