--- a/library-express/views/titles.handlebars
+++ b/library-express/views/titles.handlebars
@@ -1,6 +1,7 @@
 <main>
     <div>
-        <h3>Add Title to TEST Library</h3>
+        <h1>Library Inventory Management</h1>
+        <h2>Add Title</h2>
         <!-- <form action="/query_book_api" method="post"> -->
         <form id="addTitle" action="/titles" method="post">
             <p><label for="ISBN">ISBN:</label><br>
