--- a/library-express/views/books.handlebars
+++ b/library-express/views/books.handlebars
@@ -1,6 +1,6 @@
 <h1>Library Inventory Management</h1>
 <form id="addBook" action="/books" method="post">
-    <h1>Add book to library inventory</h1>
+    <h2>Add Book</h2>
     <label for="ISBN">ISBN: </label>
     <select name="ISBN" required>
         {{#each titles}}
