--- a/library-express/views/loan_status.handlebars
+++ b/library-express/views/loan_status.handlebars
@@ -3,7 +3,7 @@
     <body>
         <h1>Library Inventory Management</h1>
         <form id="addStatus" action="/loan_status" method="post">
-            <h2>Add loan status</h1>
+            <h2>Add Loan Status</h1>
             <label>Status Name: </label>
             <input type="text" name="statusDescription" required><br>
             <p><input type="submit" value="Create Status"></p>
