Can update a patrons favorite title to NULL

--- a/library-express/views/patrons.handlebars
+++ b/library-express/views/patrons.handlebars
@@ -19,6 +19,7 @@
         </p>
         <p><label for="favoriteTitle">Favorite Book:</label><br>
             <select name="favoriteTitle">
+                <option value=null selected>--</option>
                 {{#each titles}}
                 <option value="{{ISBN}}">{{ISBN}} - {{bookTitle}}</option>
                 {{/each}}
