--- a/library-express/views/layouts/index.handlebars
+++ b/library-express/views/layouts/index.handlebars
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <link rel="stylesheet" href="layout.css" type="text/css">
+    </head>
     <body>
         <div>
             {{> header}}
