--- a/library-express/views/partials/header.handlebars
+++ b/library-express/views/partials/header.handlebars
@@ -5,9 +5,9 @@
                 <td><a href="/">Home</a></td>
                 <td><a href="/titles">Titles</a></td>
                 <td><a href="/books">Books</a></td>
-                <td><a href="/patrons">Add a Patron</a></td>
-                <td><a href="/create_loan">Create a Loan</a></td>
-                <td><a href="/loan_items">View Loan Details</a></td>
+                <td><a href="/patrons">Patrons</a></td>
+                <td><a href="/create_loan">Loans</a></td>
+                <td><a href="/loan_items">Loan Details</a></td>
                 <td><a href="/loan_status">Loan Statuses</a></td>
             </tr>
         </table>
