Added link to loan items from loans

--- a/library-express/views/create_loan.handlebars
+++ b/library-express/views/create_loan.handlebars
@@ -51,6 +51,7 @@
                             <td>{{loanDate}}</td>
                             <td>{{bookCount}}</td>
                             <input type="hidden" id="loanID" name="loanID" value={{loanID}}>
+                            <td><button type="submit" formaction="/loan_items" formmethod="get">View Details</button>
                             <td><button type="submit" formaction="/delete_loan" formmethod="post">Delete</button></td>
                         </form>
                     </tr>
