Updated table headers

--- a/library-express/views/create_loan.handlebars
+++ b/library-express/views/create_loan.handlebars
@@ -39,6 +39,7 @@
                         <th>Patron</th>
                         <th>Loan Date</th>
                         <th>Book Count</th>
+                        <th>Loan Details</th>
                         <th>Delete</th>
                     </tr>
                 </thead>
