Purchase date defaults to today

--- a/library-express/views/books.handlebars
+++ b/library-express/views/books.handlebars
@@ -11,7 +11,7 @@
         {{/each}}
     </select>
     <label for="purchaseDate">Purchase Date: </label>
-    <input type="date" name="purchaseDate" />
+    <input type="date" id="purchaseDate" name="purchaseDate" />
     <button type="submit">Submit</button>
 </form>
 <br>
