--- a/library-express/public/css/tables.css
+++ b/library-express/public/css/tables.css
@@ -14,3 +14,4 @@ table tbody td{vertical-align:top; border-collapse:collapse; border-left:1px sol
 table thead th, table tbody td{padding:5px; border-collapse:collapse;}
 table tbody tr.light{color:#666666; background-color:#F7F7F7;}
 table tbody tr.dark{color:#666666; background-color:#E8E8E8;}
+table tbody tr{border-bottom: 1pt solid #CCCCCC;}
